--- a/index.html
+++ b/index.html
@@ -32,7 +32,26 @@
             </ul>
         </div>
     </nav>
-</body>
+    <div class="container">
+        <div class="page-header" id="Travel">
+            <h2 class="text-capitalize">places must visit</h2>
+        </div>
+        <center>
+            <div class="travelme">
+                <img class="img-responsive" src="london.jpeg">
+                <h4 class="text-capitalize">
+                    <kbd>london</kbd>
+                </h4>
+                <hr>
+                <h5 class="text-success text-left text-capitalize">i love school</h5>
+                <p class="text-muted text-left">The JBCN International School is a private, co-educational day school, with its branches at Borivali, Oshiwara, Chembur, and Parel in Mumbai, India. The school is affiliated with the International Baccalaureate, Cambridge Assessment International Education and Council for the Indian School Certificate Examinations.</p>
+            </div>
+        </center>
+        <div class="page-header" id="movies">
+            <h2 class="text-capitalize">movies you must watch</h2>
+        </div>
 
+    </div>
+</body>
 
 </html>
