--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
         </div>
     </nav>
     <div class="container">
-        <div class="page-header" id="Travel">
-            <h2 class="text-capitalize">places must visit</h2>
+        <div class="page-header" id="school">
         </div>
         <center>
-            <div class="travelme">
-                <img class="img-responsive" src="london.jpeg">
+            <div class="schoolme">
+                <img class="img-responsive" src="JBCN.png">
                 <h4 class="text-capitalize">
-                    <kbd>london</kbd>
+                    <kbd>JBCN</kbd>
                 </h4>
                 <hr>
                 <h5 class="text-success text-left text-capitalize">i love school</h5>
@@ -48,7 +47,7 @@
             </div>
         </center>
         <div class="page-header" id="movies">
-            <h2 class="text-capitalize">movies you must watch</h2>
+            <h2 class="text-capitalize">why you should go to jbcn</h2>
         </div>
 
     </div>
