--- a/index.html
+++ b/index.html
@@ -46,10 +46,36 @@
                 <p class="text-muted text-left">The JBCN International School is a private, co-educational day school, with its branches at Borivali, Oshiwara, Chembur, and Parel in Mumbai, India. The school is affiliated with the International Baccalaureate, Cambridge Assessment International Education and Council for the Indian School Certificate Examinations.</p>
             </div>
         </center>
-        <div class="page-header" id="movies">
+        <div class="page-header" id="school">
             <h2 class="text-capitalize">why you should go to jbcn</h2>
         </div>
+        <div class="bg-primary school_head" data-toggle="collapse" data-target="#school"><span class="glyphicon glyphicon-film"></span> Jbcn<i class="fa fa-sort-desc"></i>
 
+        </div>
+        <div id="school" class="collapse">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <img src="JBCN.png" class="img-responsive img-thumbnail">
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12school_text">
+                <h5 class="text-success text-left text-capitalize">Excellent school to go
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                </h5>
+                <p> This is a school that is very good</p>
+
+            </div>
+        </div>
+        <div class="page-header" id="school">
+            <h2 class="text-capitalize">jbcn school</h2>
+
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+                <h4>LEGO plans to find replacement material for bricks by 2030</h4>
+                <img src="Lego.jpg" class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12"> In an effort to be more environmentally responsible, LEGO have said they aim to stop manufacturing bricks made of plastic resin and are considering other options, which could include hemp. According to Telegraph World, the company makes 60 billion blocks a year. While LEGO want to replace the harmful plastic used in their products, they also require the new material to meet high standards that allow the blocks to work as they always have, especially with the effective "clicking" together is a key aspect of the iconic coloured block. </p>
     </div>
 </body>
 
