--- a/index.html
+++ b/index.html
@@ -76,7 +76,40 @@
             <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
                 <h4>LEGO plans to find replacement material for bricks by 2030</h4>
                 <img src="Lego.jpg" class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12"> In an effort to be more environmentally responsible, LEGO have said they aim to stop manufacturing bricks made of plastic resin and are considering other options, which could include hemp. According to Telegraph World, the company makes 60 billion blocks a year. While LEGO want to replace the harmful plastic used in their products, they also require the new material to meet high standards that allow the blocks to work as they always have, especially with the effective "clicking" together is a key aspect of the iconic coloured block. </p>
-    </div>
+
+                <div class="page-header" id="emma watson">
+                    <h2 class="text-capitalize">emma watson</h2>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h3>emma watson</h3>
+                    <h4><mark class="header">
+                            <i> <sup><i class="fa fa-quote-left"></i></sup>
+                                emma watson was in harry potter
+                                <sup><i class="fa fa-quote-right"></i></sup></i>
+                        </mark></h4>
+                </div>
+                <div class="page-header">
+                    <h2 class="text-capitalize">she is good</h2>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" data-toggle="modal" data- target="#emma watson">
+                    <img src="Emma-Watson-.jpeg" class="img-responsive>">
+                    <hr>
+                    <p class="emma watson">emma watson</p>
+                </div>
+                <div class="model fade" id="emma watson">
+                    <div class="model-dialog">
+                        <div class="model-header">
+                            <button type="button" class="close" data-dissmiss="modal">&times;</button>
+                            <h4 class="modal-title">emma watson</h4>
+                        </div>
+                        <div class="modal-body">
+                            <img src="Emma-Watson-.jpeg" class="img-risponsive img_modal">
+                            <p class="p_modal">she is great in the world<br>
+                                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQV_knpSDFCiB9Til6QMgpxYZzyoGxiEchgD_H8zM1uTCcEUCqgwsvKoTLrFpCeOnFqpYU&usqp=CAU"><b>best picture</b></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
 </body>
 
 </html>
